Updated some styles in index Fixed Spacing for products with a max width

--- a/about-me-style.css
+++ b/about-me-style.css
@@ -128,7 +128,7 @@ a:visited {
 .made-by-labels {
     display: flex;
     flex-wrap: wrap;
-    row-gap: 4px;
+    column-gap: 4px;
 }
 
 .made-by-labels p {
