--- a/style.css
+++ b/style.css
@@ -12,14 +12,12 @@ body {
 
     font-family: "Poppins", sans-serif, serif;
 
-    /* Debugging */
     background-color: #e0d6c6;
     color: #3c3434;
 }
 
 .webpage-content {
     flex: 1 1 auto;
-    /* background-color: #040509; */
 
     display: flex;
     flex-direction: column;
@@ -71,8 +69,6 @@ a:visited {
 }
 
 .content {
-    flex: 9 1 auto;
-
     display: flex;
     flex-direction: column;
     gap: 32px;
@@ -82,6 +78,7 @@ a:visited {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
 }
 
 .products-section-title {
@@ -89,6 +86,8 @@ a:visited {
 }
 
 .products {
+    max-width: 1500px;
+
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -110,7 +109,7 @@ a:visited {
 }
 
 .product-description {
-    margin: 8px;
+    margin: 8px 0;
     padding: 0;
     text-align: center;
 }
@@ -157,11 +156,15 @@ a:visited {
 
     display: flex;
     align-items: center;
-    gap: 16px;
+    gap: 8px;
 }
 
 .call-to-action-text {
     flex: 2 1 auto;
+}
+
+#call-to-action-title {
+    margin: 0;
 }
 
 .storefront-button {
